; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_dev_addr_lists.c_dev_uc_add.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_dev_addr_lists.c_dev_uc_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32, i32 }

@NETDEV_HW_ADDR_T_UNICAST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dev_uc_add(%struct.net_device* %0, i8* %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.net_device*, %struct.net_device** %3, align 8
  %7 = call i32 @netif_addr_lock_bh(%struct.net_device* %6)
  %8 = load %struct.net_device*, %struct.net_device** %3, align 8
  %9 = getelementptr inbounds %struct.net_device, %struct.net_device* %8, i32 0, i32 1
  %10 = load i8*, i8** %4, align 8
  %11 = load %struct.net_device*, %struct.net_device** %3, align 8
  %12 = getelementptr inbounds %struct.net_device, %struct.net_device* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @NETDEV_HW_ADDR_T_UNICAST, align 4
  %15 = call i32 @__hw_addr_add(i32* %9, i8* %10, i32 %13, i32 %14)
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* %5, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %21, label %18

18:                                               ; preds = %2
  %19 = load %struct.net_device*, %struct.net_device** %3, align 8
  %20 = call i32 @__dev_set_rx_mode(%struct.net_device* %19)
  br label %21

21:                                               ; preds = %18, %2
  %22 = load %struct.net_device*, %struct.net_device** %3, align 8
  %23 = call i32 @netif_addr_unlock_bh(%struct.net_device* %22)
  %24 = load i32, i32* %5, align 4
  ret i32 %24
}

declare dso_local i32 @netif_addr_lock_bh(%struct.net_device*) #1

declare dso_local i32 @__hw_addr_add(i32*, i8*, i32, i32) #1

declare dso_local i32 @__dev_set_rx_mode(%struct.net_device*) #1

declare dso_local i32 @netif_addr_unlock_bh(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
